force-app/main/default/objects/Workload__c/Workload__c.object-meta.xml
<CustomObject>
    <label>Workload</label>
    <nameField>
        <displayFormat>WLN-{000000}</displayFormat>
        <label>Work Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workload</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>