force-app/main/default/objects/Workload__c/fields/ESI_Items_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>ESI_Items_In_Progress__c</fullName>
    <label>ESI Items In-Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>