force-app/main/default/objects/Workload__c/fields/Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Name__c</fullName>
    <formula>User__r.FirstName +&apos; &apos;+ User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigator Name</label>
    <type>Text</type>
</CustomField>