force-app/main/default/objects/Workload__c/fields/Items_Assigned_Not_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Items_Assigned_Not_Accepted__c</fullName>
    <label>Items Assigned Not Accepted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>