force-app/main/default/objects/Workload__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Items_Assigned_Not_Accepted__c</columns>
    <columns>Items_In_Progress__c</columns>
    <columns>ESI_Items_In_Progress__c</columns>
    <columns>Type_of_Assignee__c</columns>
    <columns>Items_QA_Rejected__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>